passed23